<resources>
    <string name="app_name">Calculator</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="power">^</string>
    <string name="c">C</string>
    <string name="erase">⌫</string>
    <string name="point">.</string>
    <string name="plus">+</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="minus">-</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="multiplication">*</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="division">/</string>
    <string name="left_bound">(</string>
    <string name="_0">0</string>
    <string name="right_bound">)</string>
    <string name="equal">=</string>
</resources>
