<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:layout_weight="1"
        android:orientation="vertical"
        android:background="#03fc9d"
        tools:layout_editor_absoluteX="200dp"
        tools:layout_editor_absoluteY="297dp">

        <TextView
            android:id="@+id/Expression"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:padding="30sp"
            style="@style/TextViewTextStyle" />

        <TextView
            android:id="@+id/Result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            style="@style/TextViewTextStyle"
            android:padding="30sp" />

        <TableLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom">


            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center">


                <Button
                    android:id="@+id/button_sin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="OnButtonSinClick"
                    android:text="@string/sin"
                    style="@style/ButtonTextStyle"
                    android:background="@drawable/calculator_button_style"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/button_cos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="OnButtonCosClick"
                    android:text="@string/cos"
                    style="@style/ButtonTextStyle"
                    android:background="@drawable/calculator_button_style"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/button_tan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="OnButtonTanClick"
                    android:text="@string/tan"
                    style="@style/ButtonTextStyle"
                    android:background="@drawable/calculator_button_style"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/button_power"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="OnButtonPowerClick"
                    android:text="@string/power"
                    style="@style/ButtonTextStyle"
                    android:background="@drawable/calculator_button_style"
                    android:textSize="30sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <Button
                    android:id="@+id/button_erase_all"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="OnButtonEraseAllClick"
                    android:text="@string/c"
                    style="@style/ButtonTextStyle"
                    android:textColor="#ff0000"
                    android:background="@drawable/calculator_button_style"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/button_erase"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="OnButtonEraseClick"
                    android:text="@string/erase"
                    style="@style/ButtonTextStyle"
                    android:background="@drawable/calculator_button_style"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/button_point"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="OnButtonPointClick"
                    android:text="@string/point"
                    style="@style/ButtonTextStyle"
                    android:background="@drawable/calculator_button_style"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/button_plus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="OnButtonPlusClick"
                    android:text="@string/plus"
                    style="@style/ButtonTextStyle"
                    android:background="@drawable/calculator_button_style"
                    android:textSize="30sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <Button
                    android:id="@+id/button_seven"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="OnButtonNumberClick"
                    android:text="@string/_7"
                    style="@style/ButtonTextStyle"
                    android:background="@drawable/calculator_button_style"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/button_eight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="OnButtonNumberClick"
                    android:text="@string/_8"
                    style="@style/ButtonTextStyle"
                    android:background="@drawable/calculator_button_style"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/button_nine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="OnButtonNumberClick"
                    android:text="@string/_9"
                    style="@style/ButtonTextStyle"
                    android:background="@drawable/calculator_button_style"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/button_minus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="OnButtonMinusClick"
                    android:text="@string/minus"
                    style="@style/ButtonTextStyle"
                    android:background="@drawable/calculator_button_style"
                    android:textSize="30sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <Button
                    android:id="@+id/button_four"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="OnButtonNumberClick"
                    android:text="@string/_4"
                    style="@style/ButtonTextStyle"
                    android:background="@drawable/calculator_button_style"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/button_five"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="OnButtonNumberClick"
                    android:text="@string/_5"
                    style="@style/ButtonTextStyle"
                    android:background="@drawable/calculator_button_style"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/button_six"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="OnButtonNumberClick"
                    android:text="@string/_6"
                    style="@style/ButtonTextStyle"
                    android:background="@drawable/calculator_button_style"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/button_multiplication"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="OnButtonMultiplicationClick"
                    android:text="@string/multiplication"
                    style="@style/ButtonTextStyle"
                    android:background="@drawable/calculator_button_style"
                    android:textSize="30sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <Button
                    android:id="@+id/button_one"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="OnButtonNumberClick"
                    android:text="@string/_1"
                    style="@style/ButtonTextStyle"
                    android:background="@drawable/calculator_button_style"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/button_two"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="OnButtonNumberClick"
                    android:text="@string/_2"
                    style="@style/ButtonTextStyle"
                    android:background="@drawable/calculator_button_style"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/button_three"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="OnButtonNumberClick"
                    android:text="@string/_3"
                    style="@style/ButtonTextStyle"
                    android:background="@drawable/calculator_button_style"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/button_division"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="OnButtonDivisionClick"
                    android:text="@string/division"
                    style="@style/ButtonTextStyle"
                    android:background="@drawable/calculator_button_style"
                    android:textSize="30sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <Button
                    android:id="@+id/button_left_bound"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="OnButtonLeftBoundClick"
                    android:text="@string/left_bound"
                    style="@style/ButtonTextStyle"
                    android:background="@drawable/calculator_button_style"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/button_zero"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="OnButtonNumberClick"
                    android:text="@string/_0"
                    style="@style/ButtonTextStyle"
                    android:background="@drawable/calculator_button_style"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/button_right_bound"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="OnButtonRightBoundClick"
                    android:text="@string/right_bound"
                    style="@style/ButtonTextStyle"
                    android:background="@drawable/calculator_button_style"
                    android:textSize="30sp" />

                <Button
                    android:id="@+id/button_equal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="OnButtonEqualClick"
                    android:text="@string/equal"
                    style="@style/ButtonTextStyle"
                    android:background="@drawable/calculator_equal_button_style"
                    android:textSize="30sp" />
            </TableRow>

        </TableLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>